--- a/risk_classification.ipynb
+++ b/risk_classification.ipynb
@@ -1065,7 +1065,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model predicts lender status with exceptional accuracy."
+    "**Answer:** The logistic regression model predicts lender status with exceptional accuracy.  With 100% accuracy, the model is certain to predict a healthy borrower status.  At 95% accuracy, the model is almost certain to catch a high risk borrower based on the provided data."
    ]
   },
   {
