--- a/risk_classification.ipynb
+++ b/risk_classification.ipynb
@@ -218,7 +218,7 @@
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "lend_df = pd.read_csv(Path('../Code/Resources/lending_data.csv'))\n",
+    "lend_df = pd.read_csv(Path('lending_data.csv'))\n",
     "\n",
     "# Review the DataFrame\n",
     "lend_df.head(10)"
